infra/platform/compute/security.tf
resource "aws_security_group" "jenkins_sg" {
  name   = "${local.name_prefix}-jenkins-sg"
  vpc_id = data.terraform_remote_state.network.outputs.vpc_id

  ##################################
  # SSH
  ##################################
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ##################################
  # JENKINS UI
  ##################################
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ##################################
  # NODE EXPORTER
  ##################################
  ingress {
    from_port   = 9100
    to_port     = 9100
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  ##################################
  # EGRESS
  ##################################
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${local.name_prefix}-jenkins-sg"
  }
}
